--- a/styles/experience.css
+++ b/styles/experience.css
@@ -76,3 +76,8 @@
   max-width: 100%;
   max-height: 100%;
 }
+
+#close-icon {
+  font-size: 36px;
+  line-height: 1;
+}
